--- a/public/index.html
+++ b/public/index.html
@@ -909,8 +909,8 @@
                                                             <thead>
                                                                 <tr>
                                                                     <th>Cliente</th>
-                                                                    <th>ID</th>
-                                                                    <th>Orden</th>
+                                                                    <th>ID Cliente</th>
+                                                                    <th>ID Orden</th>
                                                                     <th>Total</th>
                                                                     <th>Estado</th>
                                                                     <th>Conf</th>
@@ -919,7 +919,7 @@
                                                             <!-- /Cabecera -->
 
                                                             <!-- Cuerpo -->
-                                                            <tbody>
+                                                            <tbody id="divListaOrdenesRecibidas">
 
                                                                 <!-- Item -->
                                                                 <tr>
@@ -954,7 +954,7 @@
                         <section id="contenido-proveedores" class="tab-pane fade" role="tabpanel">
                             <div class="container-fluid contenido-scroll-100">
                                 <h1 class="m-3 degradado-naranja">Proveedores</h1>
-                                <div class="row gy-4">
+                                <div class="row gy-4" id="div-contenido-proveedores">
                     
                                     <!--Item: Empresas-->
                                     <div class="col-sm-12 col-md-6 col-xxl-4">
@@ -1003,7 +1003,7 @@
                                         <!-- Ordenes disponibles -->
                                         <div id="content-ordenes-sin-tomar" class="tab-pane fade show active" role="tabpanel">
                                             <div class="container my-4">
-                                                <div class="row gy-2">
+                                                <div class="row gy-2" id="div-cont-ordenes-disponibles">
 
                                                     <!--Item: Ordenes-->
                                                     <div class="col-sm-6 col-md-6 col-xl-4 col-xxl-3">
@@ -1576,6 +1576,12 @@
                                     </tbody>
                                 </table>
                             </div>
+                            <!--Boton para agregar producto-->
+                            <div class="mb-3">
+                                <div class="input-group">
+                                    <button class="btn btn-primary" type="button" onclick="agregarProductoOrdenAdministracion()">Agregar producto</button>
+                                </div>
+                            </div>
                             <!--Estado-->
                             <div class="mb-3">
                                 <label class="form-label" for="estado-administracion-modal">Estado</label>
@@ -1589,11 +1595,111 @@
                             </div>
                         </form>
                     </div>
-                    <div class="modal-footer"><button class="btn btn-secundary w-100" type="button" onclick="actualizarEstadoOrdenAdm()">Guardar</button></div>
+
+
+                    <div class="modal-footer" id="footerModalEditorOrdenAdministracion">
+                        <!--Factura-->
+                        <div class="container mx-auto" >
+                            <div class="row py-2">
+                                <div class="col-md-12 d-flex justify-content-between align-items-center">
+                                    <h5 class="m-0">Subtotal</h5>
+                                    <p class="idProductoModal" id="subTotalOrdenAdm" style="font-size: 14px;color: var(--bs-gray-500);">
+                                        $218.60
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="row py-2">
+                                <div class="col-md-12 d-flex justify-content-between align-items-center">
+                                    <h5 class="m-0">ISV</h5>
+                                    <p class="idProductoModal" id="isvOrdenAdm" style="font-size: 14px;color: var(--bs-gray-500);">
+                                        $218.60
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="row py-2">
+                                <div class="col-md-12 d-flex justify-content-between align-items-center">
+                                    <h5 class="m-0">Comision</h5>
+                                    <p class="idProductoModal" id="comisionOrdenAdm" style="font-size: 14px;color: var(--bs-gray-500);">
+                                        $218.60
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="row py-2">
+                                <div class="col-md-12 d-flex justify-content-between align-items-center">
+                                    <h5 class="m-0">Total a Pagar</h5>
+                                    <p class="idProductoModal" id="totalOrdenAdm" style="font-size: 18px;color: var(--bs-gray-500);">
+                                        $2118.60
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <!--/Factura-->
+                        <button class="btn btn-secundary w-100" type="button" onclick="actualizarOrdenAdm()">Guardar</button>
+
+                    </div>
                 </div>
             </div>
         </div>
         <!--/Modal-->
+
+        <!--Modal listar productos-->
+        <div class="modal fade" id="modalListarProductosAdministracion" tabindex="-1" aria-labelledby="modalListarProductosAdministracionLabel" aria-hidden="true">
+            <div class="modal-dialog modal-xl modal-dialog-centered">
+                <div class="modal-content" style="background-color: rgb(246, 246, 246); box-shadow: 0px 0px 30px rgba(0,0,0,0.5);">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="modalListarProductosAdministracionLabel">Productos</h5>
+                        <button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <form id="productos-administracion-modal">
+                            <!--Tabla-->
+                            <div class="table table-vertical w-100">
+                                <table class="table">
+                                    <thead>
+                                        <tr>
+                                            <th>ID del producto</th>
+                                            <th>Empresa</th>
+                                            <th>Imagen</th>
+                                            <th>Producto</th>
+                                            <th>Cantidad</th>
+                                            <th>Precio</th>
+                                            <th>Total</th>
+                                            <th>Conf</th>
+                                            <th></th>
+                                        </tr>
+                                    </thead>
+                                    <tbody id="tablaModalListarProductosAdministracion">
+                                        <tr>
+                                            <td>63721673217321</td>
+                                            <td>Burger</td>
+                                            <td>
+                                                <div class="d-flex justify-content-center">
+                                                    <img src="https://i.imgur.com/3ZQ3ZQ1.png" alt="Imagen" style="width: 50px; height: 50px;" class="rounded-2">
+                                                </div>
+                                            </td>
+                                            <td>Producto 1</td>
+                                            <td>
+                                                <div class="input-group">
+                                                    <input class="form-control" type="number" value="1" min="1" max="100" id="cantidad-producto-1">
+                                                </div>
+                                            </td>
+                                            <td>L. 1000</td>
+                                            <td>L. 1000</td>
+                                            <td><button class="btn btn-primary" type="button" onclick="mostrarProductoAdministracion('adios')">Agregar</button></td>
+                                            <td><button class="btn btn-primary" type="button" onclick="mostrarProductoAdministracion('adios')">Mostrar</button></td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="modal-footer"><button class="btn btn-secundary w-100" type="button" data-bs-dismiss="modal">Cerrar</button></div>
+                </div>
+            </div>
+        </div>
+        <!--/Modal-->
+
+
 
         <!--Modal editor Producto-->
         <div class="modal fade" id="modalEditorProductoAdministracion" tabindex="-1" aria-labelledby="modalEditorProductoAdministracionLabel" aria-hidden="true">
