--- a/public/index.html
+++ b/public/index.html
@@ -1015,24 +1015,6 @@
                                         <div id="content-ordenes-sin-tomar" class="tab-pane fade show active" role="tabpanel">
                                             <div class="container my-4">
                                                 <div class="row gy-2" id="div-cont-ordenes-disponibles">
-
-                                                    <!--Item: Ordenes-->
-                                                    <div class="col-sm-6 col-md-6 col-xl-4 col-xxl-3">
-                                                        <div class="orden-card">
-                                                            <div>
-                                                                <h5 class="m-0">Orden: #123412432</h5>
-                                                                <div class="ms-2">
-                                                                    <p class="orden-card-description">12 productos</p>
-                                                                    <p class="orden-card-description">direccion de casa y todo eso</p>
-                                                                </div>
-                                                            </div>
-                                                            <div class="d-flex justify-content-center gap-2 mt-2"><button
-                                                                    class="btn btn-primary btn-sm flex-fill" type="button"
-                                                                    data-bs-toggle="modal"
-                                                                    data-bs-target="#modal-editar-orden-administrador">Abrir</button></div>
-                                                        </div>
-                                                    </div>
-                                                    <!--Fin Item-->
                     
                                                 </div>
                                             </div>
@@ -1042,20 +1024,6 @@
                                         <div id="content-ordenes-tomadas" class="tab-pane fade" role="tabpanel">
                                             <div class="container my-4">
                                                 <div class="row gy-2" id="div-cont-ordenes-tomadas">
-                                                    <div class="col-sm-6 col-md-6 col-xl-4 col-xxl-3">
-                                                        <div class="orden-card" >
-                                                            <div>
-                                                                <h5 class="m-0">Orden: #123412432</h5>
-                                                                <div class="ms-2">
-                                                                    <p class="orden-card-description">12 productos</p>
-                                                                    <p class="orden-card-description">direccion de casa y todo eso</p>
-                                                                </div>
-                                                            </div>
-                                                            <div class="d-flex justify-content-center gap-2 mt-2"><button
-                                                                    class="btn btn-primary btn-sm flex-fill" type="button">Abrir</button>
-                                                            </div>
-                                                        </div>
-                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
@@ -1064,34 +1032,6 @@
                                         <div id="content-en-camino" class="tab-pane fade" role="tabpanel">
                                             <div class="container my-4">
                                                 <div class="row gy-2" id="div-cont-ordenes-camino">
-                                                    <div class="col-sm-6 col-md-6 col-xl-4 col-xxl-3">
-                                                        <div class="orden-card">
-                                                            <div>
-                                                                <h5 class="m-0">Orden: #123412432</h5>
-                                                                <div class="ms-2">
-                                                                    <p class="orden-card-description">12 productos</p>
-                                                                    <p class="orden-card-description">direccion de casa y todo eso</p>
-                                                                </div>
-                                                            </div>
-                                                            <div class="d-flex justify-content-center gap-2 mt-2"><button
-                                                                    class="btn btn-primary btn-sm flex-fill" type="button">Abrir</button>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                    <div class="col-sm-6 col-md-6 col-xl-4 col-xxl-3">
-                                                        <div class="orden-card">
-                                                            <div>
-                                                                <h5 class="m-0">Orden: #123412432</h5>
-                                                                <div class="ms-2">
-                                                                    <p class="orden-card-description">12 productos</p>
-                                                                    <p class="orden-card-description">direccion de casa y todo eso</p>
-                                                                </div>
-                                                            </div>
-                                                            <div class="d-flex justify-content-center gap-2 mt-2"><button
-                                                                    class="btn btn-primary btn-sm flex-fill" type="button">Abrir</button>
-                                                            </div>
-                                                        </div>
-                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
@@ -1100,34 +1040,7 @@
                                         <div id="content-ordenes-entregadas" class="tab-pane fade" role="tabpanel">
                                             <div class="container my-4">
                                                 <div class="row gy-2" id="div-cont-ordenes-entregadas">
-                                                    <div class="col-sm-6 col-md-6 col-xl-4 col-xxl-3">
-                                                        <div class="orden-card">
-                                                            <div>
-                                                                <h5 class="m-0">Orden: #123412432</h5>
-                                                                <div class="ms-2">
-                                                                    <p class="orden-card-description">12 productos</p>
-                                                                    <p class="orden-card-description">direccion de casa y todo eso</p>
-                                                                </div>
-                                                            </div>
-                                                            <div class="d-flex justify-content-center gap-2 mt-2"><button
-                                                                    class="btn btn-primary btn-sm flex-fill" type="button">Abrir</button>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                    <div class="col-sm-6 col-md-6 col-xl-4 col-xxl-3">
-                                                        <div class="orden-card">
-                                                            <div>
-                                                                <h5 class="m-0">Orden: #123412432</h5>
-                                                                <div class="ms-2">
-                                                                    <p class="orden-card-description">12 productos</p>
-                                                                    <p class="orden-card-description">direccion de casa y todo eso</p>
-                                                                </div>
-                                                            </div>
-                                                            <div class="d-flex justify-content-center gap-2 mt-2"><button
-                                                                    class="btn btn-primary btn-sm flex-fill" type="button">Abrir</button>
-                                                            </div>
-                                                        </div>
-                                                    </div>
+
                                                 </div>
                                             </div>
                                         </div>
@@ -1640,10 +1553,21 @@
                             <div class="mb-3">
                                 <label class="form-label" for="estado-administracion-modal">Estado</label>
                                 <div class="input-group">
-                                    <select class="form-select" id="estado-administracion-modal">
+                                    <select class="form-select" id="estado-administracion-modal" onchange="cambioDeEstado(this)">
                                         <option value="1" selected>En camino</option>
                                         <option value="1">En camino</option>
                                         <option value="2">Entregado</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <!--Motorista Asignado-->
+                            <div class="mb-3">
+                                <label class="form-label" for="motorista-administracion-modal">Motorista Asignado</label>
+                                <div class="input-group">
+                                    <select class="form-select" id="motorista-asignado-administracion-modal" onchange="cambioDeMotorista(this)">
+                                        <option value="1" selected>Motorista 1</option>
+                                        <option value="1">Motorista 1</option>
+                                        <option value="2">Motorista 2</option>
                                     </select>
                                 </div>
                             </div>
