--- a/public/index.html
+++ b/public/index.html
@@ -998,17 +998,16 @@
                                     <ul class="nav nav-pills nav-justified" role="tablist">
                                         <li class="nav-item" role="presentation"><a
                                                  class="nav-link2 active"
-                                                role="tab" data-bs-toggle="pill" href="#div-cont-ordenes-disponibles">Ordenes disponibles</a>
+                                                role="tab" data-bs-toggle="pill" href="#content-ordenes-sin-tomar" onclick="llenarOrdenesMotorista()">Ordenes disponibles</a>
                                         </li>
                                         <li class="nav-item" role="presentation"><a
                                                  class="nav-link2" role="tab"
-                                                data-bs-toggle="pill" href="#div-cont-ordenes-tomadas">Ordenes asignadas</a></li>
-                                        <li class="nav-item" role="presentation"><a
-                                                ')" class="nav-link2" role="tab"
-                                                data-bs-toggle="pill" href="#div-cont-ordenes-camino">Ordenes en camino</a></li>
+                                                data-bs-toggle="pill" href="#content-ordenes-tomadas">Ordenes asignadas</a></li>
+                                        <li class="nav-item" role="presentation"><a class="nav-link2" role="tab"
+                                                data-bs-toggle="pill" href="#content-en-camino">Ordenes en camino</a></li>
                                         <li class="nav-item" role="presentation"><a
                                                  class="nav-link2" role="tab"
-                                                data-bs-toggle="pill" href="#div-cont-ordenes-entregadas">Ordenes entregadas</a></li>
+                                                data-bs-toggle="pill" href="#content-ordenes-entregadas">Ordenes entregadas</a></li>
                                     </ul>
                                     <div class="tab-content">
                                         <!-- Ordenes disponibles -->
