--- a/public/index.html
+++ b/public/index.html
@@ -1733,6 +1733,23 @@
                                     <button class="btn btn-primary mx-auto" type="button" data-bs-toggle="modal" id="boton-visualizar-tarjeta" data-bs-target="#modal-visualizar-datos-tarjeta">Visualizar datos de la tarjeta</button>
                                 </div>
                             </div>
+                            <!--labels de comision: Administracion y Motorista-->
+                            <div class="mb-3" id="div-comisiones">
+                                <div class="row">
+                                    <div class="col-6">
+                                        <label class="form-label" for="comision-administracion-modal">Comisión Administración</label>
+                                        <div class="input-group">
+                                            <input class="form-control" type="text" id="comision-administracion-modal" value="L. 1000" disabled>
+                                        </div>
+                                    </div>
+                                    <div class="col-6">
+                                        <label class="form-label" for="comision-motorista-modal">Comisión Motorista</label>
+                                        <div class="input-group">
+                                            <input class="form-control" type="text" id="comision-motorista-modal" value="L. 1000" disabled>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </form>
                     </div>
 
